<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GpsTracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id" translatable="false">1781335992137201</string>

    <string name="check_box_remember_login">Permanent Login</string>
    <string name="login_name">Username</string>
    <string name="email">Enter e-mail adress</string>
    <string name="password">Password</string>
    <string name="password_duplo">Password again</string>

    <string name="login_button">Login</string>

    <string name="show_on_map">Measure run</string>

    <string name="week_all">All runs</string>
    <string name="week_past">Last week</string>
    <string name="week_this">This week</string>

    <string name="date">Date of run"\n"day/month</string>
    <string name="length">Length"\n"km</string>
    <string name="time">Run time"\n"h:m:s</string>

    <string name="chronometer_start">Start</string>
    <string name="chronometer_restart">Restart</string>
    <string name="chronometer_stop">Stop and Save</string>
    <string name="chronometer_reset">Reset</string>
    <string name="chronometer_resume">Resume</string>
    <string name="chronometer_set_format">Set format string</string>
    <string name="chronometer_clear_format">Clear format string</string>
    <string name="go_back">Go back</string>
    <string name="chronometer_initial_format_with_label">Elapsed time: <xliff:g id="initial-format">%s</xliff:g></string>
    <string name="chronometer_initial_format" translatable="false"> <xliff:g id="initial-format">%s</xliff:g></string>
    <string name="chronometer">Chronometer</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="detail_of_run">Detail of Run</string>
    <string name="simple_database">Simple database</string>

    <string name="permission_map_rationale">Map permission is needed to show the exact location and Map preview.</string>
    <string name="ok">OK</string>


    <!--Google sing in strings-->

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="loading_data">Loading data…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">371297982192-ci1jmqcrv0a2aqhc5u2s7lfdh7157ggi.apps.googleusercontent.com</string>

    <string name="text_add_number_of_km">Add number of kilometers"\n"you want to run</string>
    <string name="text_currentgoal_in_km">Your current week goal is</string>
    <string name="insert_number">Insert number Please</string>


    <string name="distance">Distance travelled</string>
    <string name="date_of_run">Date of Run</string>
    <string name="tracked_runtime">Running time</string>
    <string name="velocity_of_run">Velocity</string>
    <string name="altitude_of_run">Altitude</string>
    <string name="do_you_want_to_delete_db_data">Do you really want to delete your run? This action is pernament.</string>
    <string name="deletion_of_past_run">Delete Data</string>
    <string name="run_deleted">Run deleted!</string>
    <string name="agree">Yes</string>
    <string name="disagree">No</string>
    <string name="set_km">Set km</string>
    <string name="registraiton_button">Register</string>
    <string name="text_notifyMe_info">This is notification message</string>
    <string name="notifyme">Notifications</string>
    <string name="go_to_app">Start GPS Tracker</string>
    <string name="go_to_droid">Close</string>
    <string name="Delete">Delete</string>
    <string name="dashboard">Dashboard</string>
    <string name="goal_data_set">Goal distance data set</string>
    <string name="goal_settings_restored">Goal settings are restored!</string>
    <string name="data_restored">Data restored!</string>

    <string name="insert_number_here">Insert number Please</string>
    <string name="data_not_synchronyzed">Data not synchronyzed</string>
    <string name="internet_connection_failed">Internet connection failed</string>

    <string name="faceoobk_connected">Facebook login success</string>
    <string name="google_plus_connected">Google Plus login success</string>
    <string name="facebook_connection_failed">Facebook connection failed</string>
    <string name="tracking_stopped">Tracking stopped and Stored</string>
    <string name="snackbar_default" translatable="false">snackbar?</string>
    <string name="data_inserted">Data Inserted</string>
    <string name="data_not_inserted">Data NOT Inserted</string>
    <string name="passwords_are_different">Passwords are different</string>
    <string name="bad_credentials">Wrong credentials</string>
    <string name="email_not_valid">E-mail is not valid</string>
    <string name="fill_all_edittexts">Please fill all fields</string>
    <string name="undo">Undo</string>
    <string name="required">Required</string>
    <string name="login_error">Login error, please log in again.</string>
    <string name="google_connection_failed">Google Plus disconnected</string>
    <string name="congrats">Congratulations!</string>
    <string name="keep_running">You finished your Goal! Lucky You. :) But keep on going and dobble your Goal.</string>
    <string name="syncing_data">Syncing data</string>
    <string name="username_alredy_exist">Username Alredy exist</string>
</resources>