<?xml version="1.0" encoding="utf-8"?>


<!--<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="80dp"-->
    <!--android:id="@+id/swipeSingleRun"-->
    <!--&gt;-->

    <!-- Bottom View Start-->
    <!--<LinearLayout-->
        <!--android:id="@+id/bottom_wrapper"-->
        <!--android:layout_width="160dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="horizontal"-->
        <!--android:weightSum="1">-->

        <!--&lt;!&ndash;What you want to show&ndash;&gt;-->
        <!--<TextView-->
            <!--android:id="@+id/delete_option_text_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/Delete"-->
            <!--android:textColor="@color/white"-->
            <!--android:background="@color/red"-->
            <!--android:textSize="30sp"-->
            <!--android:clickable="true"-->
             <!--/>-->
    <!--</LinearLayout>-->
    <!-- Bottom View End-->


    <!-- Surface View Start -->
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/length" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/time" />
    </LinearLayout>
    <!-- Surface View End -->
<!--</com.daimajia.swipe.SwipeLayout>-->