<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_dashboard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.gpstracker.activities.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundblurredlight2"
        android:orientation="vertical"

        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"

            style="@style/RoboTextViewTheme14sp_robotolightitalic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            />

        <!--<android.support.design.widget.TabLayout-->
        <!--android:id="@+id/sliding_tabs"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:tabMode="scrollable"-->
        <!--app:tabGravity="center"-->
        <!--/>-->
        <!--android:id="@+id/viewpagertab"-->
        <com.ogaclejapan.smarttablayout.SmartTabLayout

            android:id="@+id/sliding_tabs"

            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:stl_clickable="true"
            app:stl_defaultTabBackground="?attr/selectableItemBackground"
            app:stl_defaultTabTextAllCaps="true"
            app:stl_defaultTabTextColor="@color/colorPrimary"
            app:stl_defaultTabTextHorizontalPadding="16dp"
            app:stl_defaultTabTextMinWidth="0dp"
            app:stl_defaultTabTextSize="12sp"
            app:stl_distributeEvenly="true"
            app:stl_dividerColor="@color/colorPrimary"
            app:stl_dividerThickness="1dp"
            app:stl_drawDecorationAfterTab="false"
            app:stl_indicatorAlwaysInCenter="false"
            app:stl_indicatorColor="@color/colorAccent"
            app:stl_indicatorCornerRadius="2dp"
            app:stl_indicatorGravity="bottom"
            app:stl_indicatorInFront="false"
            app:stl_indicatorInterpolation="smart"
            app:stl_indicatorThickness="4dp"
            app:stl_indicatorWidth="auto"
            app:stl_indicatorWithoutPadding="false"
            app:stl_overlineColor="@color/colorPrimary"
            app:stl_overlineThickness="0dp"
            app:stl_titleOffset="24dp"
            app:stl_underlineColor="@color/colorPrimary"
            app:stl_underlineThickness="1dp"

            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_weight="1">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:id="@+id/ingoredView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30px" />
        </RelativeLayout>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:hapticFeedbackEnabled="true"
        android:src="@drawable/run1"
        app:rippleColor="@color/greenFAB"
        android:alpha="0.9"

        />
    <!--zisti ci to je android:focusableInTouchMode="true"-->


</android.support.design.widget.CoordinatorLayout>