...
                android:layout_marginBottom="90dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/signed_out" />

            <EditText
                android:id="@+id/loginNameInput"
                style="@style/RoboEditViewTheme25sp_robotobold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:layout_marginEnd="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginStart="45dp"
                android:hint="@string/login_name"
                android:maxLines="1"
                android:nextFocusDown="@+id/passwordInput"
                android:nextFocusForward="@+id/passwordInput"
                android:nextFocusLeft="@+id/passwordInput"
                android:nextFocusRight="@+id/passwordInput"
                android:nextFocusUp="@+id/passwordInput"
                android:singleLine="true" />

...
                android:id="@+id/check_box_login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:checked="true"
                android:nextFocusDown="@+id/buttonLogin"
                android:nextFocusForward="@+id/buttonLogin"
                android:nextFocusLeft="@+id/buttonLogin"
                android:nextFocusRight="@+id/buttonLogin"
                android:nextFocusUp="@+id/buttonLogin"
                android:text="@string/check_box_remember_login"
                android:textColor="@color/colorAccent" />
...
